# ids-hackathon

./: .dockerignore  .env.development  .env.production  .env.staging  .eslintignore  .eslintrc.json  .gitconfig.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  index.html  package.json  pyproject.toml  sql.json  vite.config.ts
.envs/local/: .django  .langfuse
.envs/prod/: .django  .postgres
.husky/: pre-commit
Frontend/: .env.development  .eslintignore  .eslintrc.json  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Frontend/src/: global.css  global.d.ts  main.tsx
Frontend/src/pages/: index.ts
Frontend/src/services/: common.service.ts  github.service.ts  index.ts
backend/: Dockerfile  Dockerfile-nginx  default.conf
backend/accounts/: admin.py  backend.py  constants.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_rename_created_on_user_created_at_and_more.py  0003_genders_roles_remove_user_role_id_and_more.py  0004_alter_user_gender.py  0005_alter_user_gender.py  0006_alter_user_gender.py  0007_delete_genders.py  0008_alter_user_role.py  0009_genders.py  0010_delete_genders.py  0011_alter_roles_created_at.py  0012_alter_user_gender.py  0013_user_otp_user_otp_expires_at.py  0014_alter_user_is_active.py
backend/agents/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/agents/migrations/: 0001_initial.py  0002_agent_service_ticketpriority_type_delete_team.py  0003_sqlcommand.py  0004_alter_agent_is_valid.py  0005_ticketlog.py  0006_ticketstate_remove_ticketlog_field_changed_and_more.py  0007_alter_ticketlog_entry_type.py  0010_ticketlog_ticket_hash.py  (+10 more)
backend/ai/: .env.example  .gitignore  preprocessing_vs.ipynb  pyproject.toml  test.ipynb
backend/ai/data/: BluCygnus_AI_FAQs.csv  IDS_L1_support_FAQs.csv
backend/ai/support_hub/: context_evaluateor.py  device_config.py  embedding_factory.py  model_hub.py  monitoring.py  rag_pipeline.py  retriever_factory.py  support_hub_search.py  vector_db.py  vector_store_factory.py
backend/ai/support_hub/ticket_classifier/: ticket_classification.py
backend/ai/support_hub/ticket_classifier/models/: categories_probabilities.py  priority.py  role_prediction.py  services_probabilities.py  ticket_prediction.py  types_probabilities.py  utils.py
backend/ai/support_hub/ticket_classifier/parsers/: output_parsers.py
backend/ai/support_hub/ticket_classifier/prompts/: ticket_prompt.py
backend/core/: base.py  celery.py  urls.py
backend/fixtures/: roles.json
backend/scripts/: django-entrypoint.sh
docker/postgres/: init-langfuse-db.sh
nginx/: Dockerfile-nginx  default.conf
postman/: Hackathon.postman_collection.json
src/: global.css  main.tsx
src/app/: App.tsx
(+73 files in other folders)
