[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "gputil>=1.4.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-pinecone>=0.2.12",
    "langgraph>=0.6.8",
    "pandas>=2.3.3",
    "pinecone>=7.3.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "standard-distutils>=3.11.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
